overflow fix

--- a/main.css
+++ b/main.css
@@ -29,3 +29,6 @@
 }
 }
 
+.swiper-slide {
+	overflow: hidden
+}
